# uniHood

./: .copilot-instructions  .cursorrules  .env.example  .env.production.example  .gitattributes  .gitignore  CONTRIBUTING.md  DEMO_GUIDE.md  GITHUB_PROFILE.md  PRODUCTION_CHECKLIST.md  README.md  TODO.md  XP_GUIDE.md  activities_env_check.json  activities_env_check_utf8.json  backend_deploy_status_v10.json  backend_deploy_status_v10_utf8.json  backend_deploy_status_v11.json  backend_deploy_status_v11_utf8.json  backend_deploy_status_v12.json  backend_deploy_status_v12_utf8.json  backend_deploy_status_v9.json  backend_deploy_status_v9_utf8.json  campus.json  debug_gzip.py  debug_gzip_v2.py  deploy_check.json  deploy_check_final.json  deploy_check_final_utf8.json  deploy_check_utf8.json  docker-compose.prod.yml  docker-compose.profiling.yml  docker-compose.yml  frontend_deploy_status.json  frontend_deploy_status_utf8.json  frontend_logs.json  headers.txt  logs.txt  logs2.txt  package-lock.json  (+16 more)
backend/: .dockerignore  .env.example  Dockerfile  README.md  backend_failures.txt  backend_failures_v2.txt  backend_failures_v2_utf8.txt  backend_failures_v3.txt  backend_failures_v3_utf8.txt  backend_failures_v4.txt  check_cors_parsing.py  check_db_debug.py  check_db_stats.py  check_env.py  db_stats.txt  deploy_status.json  ensure_admin.py  events.json  events_raw.json  fix_columns.py  health_check.py  last_deploy.json  leaderboard_full_error.txt  leaderboard_test_error.txt  legal_err.txt  phase_b_err.txt  phase_b_err_2.txt  ports.txt  pyproject.toml  seed_mcgill.py  seed_results.txt  (+7 more)
(+1945 files in other folders)
