[tool.poetry]
name = "divan-backend"
version = "0.1.0"
description = "Divan Phase 1 Proximity Core Backend"
authors = ["Divan Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
redis = "^5.0.4"
python-socketio = "^5.11.1"
asyncpg = "^0.29.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
prometheus-client = "^0.20.0"
httpx = "^0.27.0"
ulid-py = "^1.1.0"
argon2-cffi = "^23.1.0"
email-validator = "^2.0.0"
pyotp = "^2.9.0"
qrcode = {extras = ["pil"], version = "^7.4.2"}
apscheduler = "^3.10.4"
pyyaml = "^6.0.3"
PyJWT = "^2.9.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.5"
fakeredis = "^2.23.2"
testcontainers = "^4.4.0"

[tool.pytest.ini_options]
markers = [
	"integration: marks tests as requiring external services (deselect with '-m \"not integration\"')",
]
